--- a/backend/package.json
+++ b/backend/package.json
@@ -18,20 +18,20 @@
   "homepage": "https://github.com/thiagobrsouza/employee-app#readme",
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.5",
     "prisma": "^6.2.1",
+    "ts-node-dev": "^2.0.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "@types/morgan": "^1.9.9",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
-    "morgan": "^1.10.0",
-    "ts-node-dev": "^2.0.0"
+    "morgan": "^1.10.0"
   }
 }
