--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,20 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.8",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
-    "next": "15.1.4",
+    "next": "15.1.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/bootstrap": "^5.2.10",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.4",
-    "typescript": "^5"
+    "eslint-config-next": "15.1.5"
   }
 }
